Added support for a new kind of Java programing component: the module